--- a/PostLiveClient/PostLiveClient.vcxproj
+++ b/PostLiveClient/PostLiveClient.vcxproj
@@ -112,16 +112,16 @@
     <ClCompile Include="CommonConfigDialog.cpp" />
     <ClCompile Include="ffmpeg/FFmpegWidget.cpp" />
     <ClCompile Include="components/ImageLabel.cpp" />
-    <ClCompile Include="LoginPannel.cpp" />
+    <ClCompile Include="LoginPanel.cpp" />
     <ClCompile Include="components/WinDbgHelper.cpp" />
     <QtRcc Include="PostLiveClient.qrc" />
-    <QtUic Include="form/LoginPannel.ui" />
+    <QtUic Include="form/LoginPanel.ui" />
     <QtUic Include="form/PostLiveClient.ui" />
     <QtMoc Include="PostLiveClient.h" />
     <QtMoc Include="CommonConfigDialog.h" />
     <QtMoc Include="ffmpeg/FFmpegVideo.h" />
     <QtMoc Include="ffmpeg/FFmpegWidget.h" />
-    <QtMoc Include="LoginPannel.h" />
+    <QtMoc Include="LoginPanel.h" />
     <QtMoc Include="components/ImageLabel.h" />
     <ClCompile Include="ffmpeg/FFmpegVideo.cpp" />
     <ClCompile Include="PostLiveClient.cpp" />
