--- a/PostLiveClient/PostLiveClient.vcxproj
+++ b/PostLiveClient/PostLiveClient.vcxproj
@@ -104,7 +104,7 @@
       <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
